# chain-lens

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS_GAPS.md  claude.md  cli.sh  demo.md  err_test.txt  grading_summary.md  ideas.md  web.sh
.github/workflows/: classroom.yml
chain-lens-core/: Cargo.toml
chain-lens-core/src/: accounting.rs  block_parser.rs  classify.rs  disasm.rs  error.rs  lib.rs  main.rs  merkle.rs  op_return.rs  parser.rs  segwit.rs  timelock.rs  undo.rs  warnings.rs  xor.rs
chain-lens-server/: Cargo.toml
chain-lens-server/src/: main.rs
tests/: integration_tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/components/: App.tsx  BlockVisualizer.tsx  TransactionComparison.tsx  TransactionFlowDiagram.tsx  TransactionLoader.tsx  TransactionVisualizer.tsx
web/src/styles/: index.css
web/src/utils/: api.ts
